--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,11 +11,12 @@ on:
 
 jobs:
   build:
-    env:
-      working-directory: JS_TDD
       
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: 'JS_TDD'
+        
     strategy:
       matrix:
         node-version: [20.x]
