--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,19 +16,20 @@ jobs:
     defaults:
       run:
         working-directory: 'JS_TDD'
-        
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 20.x
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 20.x
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Install packages
+      working-directory: JS_TDD
+      run: npm ci
+    - name: Build
+      working-directory: JS_TDD    
+      run: npm run build --if-present
+    - name: Run tests
+      working-directory: JS_TDD    
+      run: npm test
