--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,25 +11,21 @@ on:
 
 jobs:
   build:
-      
+
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: 'JS_TDD'
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js 20.x
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: 20.x
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: Install packages
-      working-directory: JS_TDD
-      run: npm ci
-    - name: Build
-      working-directory: JS_TDD    
-      run: npm run build --if-present
-    - name: Run tests
-      working-directory: JS_TDD    
-      run: npm test
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
