--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,13 +23,18 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: '**/package-lock.json'
+        
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+    
+    - name: Run Tests
+      run: npm test
