--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,4 +37,4 @@ jobs:
     - run: npm run build --if-present
     
     - name: Run Tests
-      run: npm test -- --verbose
+      run: npm test:ci
